force-app/main/default/objects/payment_schedule__dlm/fields/payment_amount__c.field-meta.xml
<CustomField>
    <fullName>payment_amount__c</fullName>
    <label>payment_amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>payment_amount</labelOverride>
        <masterLabel>payment_amount</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>