force-app/main/default/objects/payment_schedule__dlm/fields/payment_date__c.field-meta.xml
<CustomField>
    <fullName>payment_date__c</fullName>
    <label>payment_date</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>payment_date</labelOverride>
        <masterLabel>payment_date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>