force-app/main/default/objects/payment_schedule__dlm/fields/rel_1768195396794_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1768195396794_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>payment_schedule_SourceRecordId_map__rel</label>
    <referenceTo>TestADL_TestLibDataLake__dlm</referenceTo>
    <relationshipLabel>payment_schedule_SourceRecordId_map__rel</relationshipLabel>
    <relationshipName>rel_1768195396794_end</relationshipName>
    <type>Lookup</type>
</CustomField>